@@ -1,3 +1,6 @@
+2007-12-31
+"MyWord" added the ReciteRecord class
+
 2007-12-30
 "MyWord" finished the ChooseBook function
 2007-12-29
